WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262145
REGRESSION(
267193@main
): [ Debug ] TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling is a near-constant failure.
https://bugs.webkit.org/show_bug.cgi?id=262145
Summary
REGRESSION(267193@main): [ Debug ] TestWebKitAPI.WebKit2.CrashGPUProcessWhile...
Ben Schwartz
Reported
2023-09-26 14:56:34 PDT
TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling This API test, previously a flaky failure on macOS, has further regressed to a near-constant failure on debug. HISTORY:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling
STDIO LOG: Attached (too large to paste). REPRODUCIBILITY: I was able to reproduce this issue on macOS Ventura (13.5, 22G74/arm64) ToT using the following command: run-api-tests --verbose --debug TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling REGRESSION: I was able to identify a potential regression point at
267193@main
. This issue did not reproduce before then, and changes at that point appear to be directly related to the issue.
Attachments
stdio-log-262145.txt
(82.10 KB, text/plain)
2023-09-26 15:02 PDT
,
Ben Schwartz
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-26 14:56:46 PDT
<
rdar://problem/116083315
>
Ben Schwartz
Comment 2
2023-09-26 15:02:37 PDT
Created
attachment 467881
[details]
stdio-log-262145.txt
EWS
Comment 3
2023-09-26 15:31:31 PDT
Test gardening commit
268483@main
(d6c92d7896a3): <
https://commits.webkit.org/268483@main
> Reviewed commits have been landed. Closing PR #18248 and removing active labels.
youenn fablet
Comment 4
2023-10-18 08:13:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19227
EWS
Comment 5
2023-10-19 11:19:55 PDT
Committed
269537@main
(1556c6a51e8c): <
https://commits.webkit.org/269537@main
> Reviewed commits have been landed. Closing PR #19227 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug