REGRESSION(267193@main): [ Debug ] TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling is a near-constant failure. https://bugs.webkit.org/show_bug.cgi?id=262145 rdar://116083315

Reviewed by Chris Dumez.

We moved LibWebRTCCodecsProxy::createEncoder to be an async callback and updated the regular code path in LibWebRTCCodecs.
But we forgot to update the GPUProcess crash code path.
We introduce a routine that is used for both code paths.

* Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.cpp:
(WebKit::createRemoteEncoder):
(WebKit::LibWebRTCCodecs::createEncoderInternal):
(WebKit::LibWebRTCCodecs::gpuProcessConnectionDidClose):
* Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:

Canonical link: https://commits.webkit.org/269537@main