Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm
@@ -750,8 +750,7 @@ TEST(WebKit2, CrashGPUProcessAfterApplyingConstraints)
     EXPECT_EQ(webViewPID, [webView _webProcessIdentifier]);
 }
 
-// FIXME after rdar://116083315 is resolved.
-TEST(WebKit2, DISABLED_CrashGPUProcessWhileCapturingAndCalling)
+TEST(WebKit2, CrashGPUProcessWhileCapturingAndCalling)
 {
     auto configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     auto preferences = [configuration preferences];
